# R-type

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: doxygen.yml  mirror.yml
client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientComponents.hpp  ClientSystems.cpp  ClientSystems.hpp  Render.cpp  Render.hpp  TimedEvents.cpp  TimedEvents.hpp  main.cpp
client/assets/: loadfonts.conf  loadtextures.conf
client/network/: Network.cpp  Network.hpp  PacketCallbacks.cpp  PacketCallbacks.hpp
client/src/: Loader.cpp
client/src/TextureLoader/: ParseTexture.hpp
server/: CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp  TimedEvents.cpp  TimedEvents.hpp  main.cpp
server/network/: Network.cpp  Network.hpp  NetworkHandler.cpp  NetworkHandler.hpp  PacketCallbacks.cpp  PacketCallbacks.hpp  PacketsRegistry.cpp  PacketsRegistry.hpp
server/network/packet/: EPacket.hpp  GenericPacket.hpp  IPacket.hpp
server/utils/: IdGenerator.cpp  IdGenerator.hpp
shared/: Components.hpp  Entity.cpp  Entity.hpp  Registry.hpp  SparseArray.hpp  Systems.cpp  Systems.hpp  main.cpp
shared/network/: NetworkClient.cpp  NetworkClient.hpp  NetworkHandler.hpp  PacketsRegistry.hpp
shared/network/packet/: EPacket.hpp  GenericPacket.hpp  IPacket.hpp
shared/network/utils/: IdGenerator.cpp  IdGenerator.hpp
